[gd_scene load_steps=8 format=3 uid="uid://b1obf5f3mbeg4"]

[ext_resource type="Script" path="res://main_graph_view/scripts/node_view_base.gd" id="1_jnnre"]
[ext_resource type="Script" path="res://main_graph_view/scripts/node_name.gd" id="2_km87o"]
[ext_resource type="PackedScene" uid="uid://bi22vevyj61xj" path="res://main_graph_view/components/indicator_panel.tscn" id="3_71dym"]

[sub_resource type="SystemFont" id="SystemFont_kqvky"]
generate_mipmaps = true
multichannel_signed_distance_field = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwt55"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xipxx"]
bg_color = Color(0.392157, 0.372549, 0.423529, 0.980392)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_14gnd"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_xipxx")

[node name="NodeViewBase" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(65, 54)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jnnre")

[node name="NodeName" type="LineEdit" parent="." groups=["NodeNameLabel"]]
layout_direction = 1
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 67.0625
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_kqvky")
theme_override_styles/focus = SubResource("StyleBoxFlat_wwt55")
expand_to_text_length = true
middle_mouse_paste_enabled = false
selecting_enabled = false
flat = true
caret_blink = true
script = ExtResource("2_km87o")

[node name="IndicatorPanel" parent="." instance=ExtResource("3_71dym")]
layout_mode = 1
offset_left = -23.0

[node name="NodeElementContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackgroundPanel" type="PanelContainer" parent="NodeElementContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
focus_mode = 1
theme = SubResource("Theme_14gnd")

[node name="DebugContainer" type="VBoxContainer" parent="." groups=["DEBUG"]]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="IdLabel" type="Label" parent="DebugContainer"]
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 2

[node name="TypeLabel" type="Label" parent="DebugContainer"]
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="DebugContainer"]
layout_mode = 2

[connection signal="focus_exited" from="NodeName" to="NodeName" method="_on_focus_exited"]
[connection signal="gui_input" from="NodeName" to="NodeName" method="_on_gui_input"]
[connection signal="text_changed" from="NodeName" to="." method="_on_node_name_text_changed"]
